--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,14 @@
     tools:context=".LoginActivity">
 
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="15dp"
 
+        android:layout_marginBottom="20dp"
+        app:srcCompat="@drawable/nav_logo_whiteout" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/username_text_input_layout"
@@ -20,8 +27,11 @@
             android:id="@+id/etUserName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:hint="username" />
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="15dp"
+            android:hint="username"
+            android:textSize="18sp" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -35,8 +45,11 @@
             android:id="@+id/etPassWord"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+            android:layout_marginBottom="15dp"
             android:ems="10"
 
             android:inputType="textPassword"
@@ -48,7 +61,22 @@
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login" />
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="15dp"
+        android:background="@color/blueteal_7"
+        android:text="Login"
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/btnSign"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:background="@color/bugreporter_screen_capture_background_border"
+        android:text="Sign Up"
+        android:textSize="18sp" />
 
 
 
